# sovereign-swarm-v2

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: audit.jsonl  audit.txt
sovereign_swarm/: __init__.py  __main__.py  _compat.py  cli.py  config.py  repl.py  tests.py
sovereign_swarm/agents/: __init__.py  base_agent.py  factory.py  hitl.py  job.py  plugin.py  scheduler.py  specialist.py
sovereign_swarm/bench/: __init__.py
sovereign_swarm/health/: __init__.py  controller.py
sovereign_swarm/infra/: __init__.py  battery.py  bus.py  cluster.py  hybrid_memory.py  llm_client.py  memory.py  platform.py  state.py  thermal.py
sovereign_swarm/intelligence/: __init__.py  agent_profile.py  economy.py  evolution.py  heal.py  heal_strategy.py  orchestrator.py  reputation.py
sovereign_swarm/protocols/: __init__.py  a2a.py  agency_bridge.py  bridge.py  fixfizx_client.py  hermes.py  hermes_v2.py  hermes_wiring.py  mcp.py  moltworker_client.py  openclaw.py  qwen3.py  webhook_server.py
sovereign_swarm/safety/: __init__.py  alert.py  audit.py  backup.py  budget.py  cost.py  council.py  observe.py  rbac.py  schema.py
