[project]
name = "sovereign-swarm"
version = "2.0.0"
description = "Sovereign Swarm — Modular Multi-Agent OS"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
all = ["aiohttp>=3.8", "pydantic>=2.0", "prometheus-client>=0.20"]
http = ["aiohttp>=3.8"]
validate = ["pydantic>=2.0"]
metrics = ["prometheus-client>=0.20"]

[project.scripts]
swarm-repl = "sovereign_swarm.cli:main"
swarm-test = "sovereign_swarm.tests:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sovereign_swarm"]
